  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.78 2009/10/07 20:03:55 stream Exp $
==========================================================================

2.9100
------
2.9106-514  fix: all: cannot run test or bench if OS doesn't support
                      cpu count detection.
            imp: x86: Via C7-D/M Model D detection.
            fix: stream: rc5-72 added Catalyst 9.9 support
            fix: some: one thread stays asleep in 'pause when running' (#4248)

2.9106-513  new: amd64: two new asm ogr64 cores added and selected 
                        as default (#4183)
            new: x86: new rc5-72 go-2b core (#4193)
            chg: amd64: drop ansi rc5-72 cores
            chg: amd64: rc5-72 core selection for Atom
            fix: amd64: ogr core selection for Athlon (#4214)
            fix: amd64: rc5-72 core selection for Core i7 (#3817)
            imp: cuda: support CUDA 2.3
            fix: some: busy loop in polling subsystem while paused (#4148)
            imp: ppc: recognize more PowerPC processors

2.9105-512  fix: cuda: version increment to identify compiler bug (#4201)
            chg: cuda: switch to CUDA 2.2
            chg: cuda: drop support for buggy toolkit 2.0/2.1

2.9105-511  fix: ppc: Fixed scalar and hybrid OGR-NG cores (#4187)
            imp: cellbe: detect linux kernel SPU scheduler (spufs) bugs
            new: linux: runs-on-battery-power detection via sysfs

2.9104-510  imp: all: handle lack of a supported cpu/gpu more gracefully
            imp: gpgpu: terminate on unsupported driver/library installations
            imp: gpgpu: raise rc5-72 buffer limit to 10000